// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`hocuspocus grid-less round trip (golden) > counts pages and non-deleted fields for FormMetadata 1`] = `
{
  "backgroundDominantColor": null,
  "backgroundImageKey": "bg/key.png",
  "backgroundVideoKey": null,
  "fieldCount": 10,
  "pageCount": 2,
}
`;

exports[`hocuspocus grid-less round trip (golden) > reconstructs this schema for readers (soft-deleted fields stay flagged) 1`] = `
{
  "isShuffleEnabled": false,
  "layout": {
    "backgroundDominantColor": "",
    "backgroundImageKey": "bg/key.png",
    "backgroundVideoKey": "",
    "code": "L1",
    "content": "<p>Hi</p>",
    "customBackGroundColor": "#ffffff",
    "customCTAButtonName": "Get Started",
    "isCustomBackgroundColorEnabled": false,
    "pageMode": "multipage",
    "spacing": "normal",
    "textColor": "#111111",
    "thankYouContent": "<h1>Thank you!</h1><p>Your response has been submitted.</p>",
    "theme": "light",
  },
  "pages": [
    {
      "fields": [
        {
          "defaultValue": "",
          "hint": "Full name",
          "id": "f-text",
          "label": "Name",
          "placeholder": "Jane",
          "prefix": "Mr",
          "suffix": "",
          "type": "text_input_field",
          "validation": {
            "maxLength": 40,
            "maxSelections": undefined,
            "minLength": 2,
            "minSelections": undefined,
            "required": true,
            "type": "text_input_field",
          },
        },
        {
          "defaultValue": "",
          "hint": "",
          "id": "f-area",
          "label": "Bio",
          "placeholder": "",
          "prefix": "",
          "suffix": "",
          "type": "text_area_field",
          "validation": {
            "maxLength": 500,
            "maxSelections": undefined,
            "minLength": undefined,
            "minSelections": undefined,
            "required": false,
            "type": "text_area_field",
          },
        },
        {
          "defaultValue": "",
          "hint": "",
          "id": "f-email",
          "label": "Email",
          "placeholder": "",
          "prefix": "",
          "suffix": "",
          "type": "email_field",
          "validation": {
            "maxLength": undefined,
            "maxSelections": undefined,
            "minLength": undefined,
            "minSelections": undefined,
            "required": true,
            "type": "email_field",
          },
        },
        {
          "defaultValue": "",
          "hint": "",
          "id": "f-number",
          "label": "Age",
          "max": 120,
          "min": 1,
          "placeholder": "",
          "prefix": "",
          "suffix": "",
          "type": "number_field",
          "validation": {
            "maxLength": undefined,
            "maxSelections": undefined,
            "minLength": undefined,
            "minSelections": undefined,
            "required": false,
            "type": "number_field",
          },
        },
        {
          "defaultValue": "",
          "hint": "",
          "id": "f-date",
          "label": "Birthday",
          "maxDate": "2100-01-01",
          "minDate": "1900-01-01",
          "placeholder": "",
          "prefix": "",
          "suffix": "",
          "type": "date_field",
          "validation": {
            "maxLength": undefined,
            "maxSelections": undefined,
            "minLength": undefined,
            "minSelections": undefined,
            "required": false,
            "type": "date_field",
          },
        },
        {
          "defaultValue": "",
          "deleted": true,
          "hint": "",
          "id": "f-gone",
          "label": "Removed",
          "placeholder": "",
          "prefix": "",
          "suffix": "",
          "type": "text_input_field",
          "validation": {
            "maxLength": undefined,
            "maxSelections": undefined,
            "minLength": undefined,
            "minSelections": undefined,
            "required": false,
            "type": "text_input_field",
          },
        },
        {
          "content": "<p>Welcome</p>",
          "id": "f-rich",
          "type": "rich_text_field",
        },
      ],
      "id": "page-1",
      "order": 0,
      "showPageName": true,
      "title": "About you",
    },
    {
      "fields": [
        {
          "defaultValue": "",
          "hint": "",
          "id": "f-select",
          "label": "Country",
          "multiple": true,
          "options": [
            "IN",
            "US",
          ],
          "placeholder": "",
          "prefix": "",
          "suffix": "",
          "type": "select_field",
          "validation": {
            "maxLength": undefined,
            "maxSelections": undefined,
            "minLength": undefined,
            "minSelections": undefined,
            "required": true,
            "type": "select_field",
          },
        },
        {
          "defaultValue": "",
          "hint": "",
          "id": "f-radio",
          "label": "Size",
          "options": [
            "S",
            "M",
          ],
          "placeholder": "",
          "prefix": "",
          "suffix": "",
          "type": "radio_field",
          "validation": {
            "maxLength": undefined,
            "maxSelections": undefined,
            "minLength": undefined,
            "minSelections": undefined,
            "required": false,
            "type": "radio_field",
          },
        },
        {
          "defaultValue": [
            "Red",
          ],
          "hint": "",
          "id": "f-check",
          "label": "Colours",
          "options": [
            "Red",
            "Blue",
          ],
          "placeholder": "",
          "prefix": "",
          "suffix": "",
          "type": "checkbox_field",
          "validation": {
            "maxLength": undefined,
            "maxSelections": 2,
            "minLength": undefined,
            "minSelections": 1,
            "required": false,
            "type": "checkbox_field",
          },
        },
        {
          "allowedMimeTypes": [],
          "hint": "PDF only",
          "id": "f-file",
          "label": "Resume",
          "maxFileSizeMb": undefined,
          "maxFiles": undefined,
          "prefix": "",
          "type": "file_upload_field",
          "validation": {
            "required": false,
            "type": "file_upload_field",
          },
        },
      ],
      "id": "page-2",
      "order": 1,
      "showPageName": false,
      "title": "Preferences",
    },
  ],
}
`;

exports[`hocuspocus grid-less round trip (golden) > seeds this Y.Doc JSON from a grid-less form 1`] = `
{
  "isShuffleEnabled": false,
  "layout": {
    "backgroundDominantColor": "",
    "backgroundImageKey": "bg/key.png",
    "backgroundVideoKey": "",
    "code": "L1",
    "content": "<p>Hi</p>",
    "customBackGroundColor": "#ffffff",
    "customCTAButtonName": "Get Started",
    "isCustomBackgroundColorEnabled": false,
    "pageMode": "multipage",
    "spacing": "normal",
    "textColor": "#111111",
    "thankYouContent": "<h1>Thank you!</h1><p>Your response has been submitted.</p>",
    "theme": "light",
  },
  "pages": [
    {
      "fields": [
        {
          "defaultValue": "",
          "hint": "Full name",
          "id": "f-text",
          "label": "Name",
          "placeholder": "Jane",
          "prefix": "Mr",
          "suffix": "",
          "type": "text_input_field",
          "validation": {
            "maxLength": 40,
            "minLength": 2,
            "required": true,
            "type": "text_input_field",
          },
        },
        {
          "defaultValue": "",
          "hint": "",
          "id": "f-area",
          "label": "Bio",
          "placeholder": "",
          "prefix": "",
          "suffix": "",
          "type": "text_area_field",
          "validation": {
            "maxLength": 500,
            "required": false,
            "type": "text_area_field",
          },
        },
        {
          "defaultValue": "",
          "hint": "",
          "id": "f-email",
          "label": "Email",
          "placeholder": "",
          "prefix": "",
          "suffix": "",
          "type": "email_field",
          "validation": {
            "required": true,
            "type": "email_field",
          },
        },
        {
          "defaultValue": "",
          "hint": "",
          "id": "f-number",
          "label": "Age",
          "max": 120,
          "min": 1,
          "placeholder": "",
          "prefix": "",
          "suffix": "",
          "type": "number_field",
          "validation": {
            "required": false,
            "type": "number_field",
          },
        },
        {
          "defaultValue": "",
          "hint": "",
          "id": "f-date",
          "label": "Birthday",
          "maxDate": "2100-01-01",
          "minDate": "1900-01-01",
          "placeholder": "",
          "prefix": "",
          "suffix": "",
          "type": "date_field",
          "validation": {
            "required": false,
            "type": "date_field",
          },
        },
        {
          "defaultValue": "",
          "deleted": true,
          "hint": "",
          "id": "f-gone",
          "label": "Removed",
          "placeholder": "",
          "prefix": "",
          "suffix": "",
          "type": "text_input_field",
          "validation": {
            "required": false,
            "type": "text_input_field",
          },
        },
        {
          "content": "<p>Welcome</p>",
          "id": "f-rich",
          "type": "rich_text_field",
        },
      ],
      "id": "page-1",
      "order": 0,
      "showPageName": true,
      "title": "About you",
    },
    {
      "fields": [
        {
          "defaultValue": "",
          "hint": "",
          "id": "f-select",
          "label": "Country",
          "multiple": true,
          "options": [
            "IN",
            "US",
          ],
          "placeholder": "",
          "prefix": "",
          "suffix": "",
          "type": "select_field",
          "validation": {
            "required": true,
            "type": "select_field",
          },
        },
        {
          "defaultValue": "",
          "hint": "",
          "id": "f-radio",
          "label": "Size",
          "options": [
            "S",
            "M",
          ],
          "placeholder": "",
          "prefix": "",
          "suffix": "",
          "type": "radio_field",
          "validation": {
            "required": false,
            "type": "radio_field",
          },
        },
        {
          "defaultValue": [
            "Red",
          ],
          "hint": "",
          "id": "f-check",
          "label": "Colours",
          "options": [
            "Red",
            "Blue",
          ],
          "placeholder": "",
          "prefix": "",
          "suffix": "",
          "type": "checkbox_field",
          "validation": {
            "maxSelections": 2,
            "minSelections": 1,
            "required": false,
            "type": "checkbox_field",
          },
        },
        {
          "hint": "PDF only",
          "id": "f-file",
          "label": "Resume",
          "prefix": "",
          "type": "file_upload_field",
          "validation": {
            "required": false,
            "type": "file_upload_field",
          },
        },
      ],
      "id": "page-2",
      "order": 1,
      "showPageName": false,
      "title": "Preferences",
    },
  ],
}
`;
